# brit-lib-fetch

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
brit_lib_fetch/: api.py  manuscript.py  model.py
brit_lib_fetch/scripts/: assemble.py  fetch.py
