[tool.poetry]
authors = ["Paweł Górski <23619748+bluebears-dev@users.noreply.github.com>"]
description = ""
license = "MIT"
name = "brit_lib_fetch"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
asyncio = "^3.4.3"
loguru = "^0.7.0"
lxml = "^4.9.2"
pillow = "^9.5.0"
python = "^3.11"
requests = "^2.30.0"
requests-cache = "^1.0.1"
urllib3 = "^2.0.2"
xmltodict = "^0.13.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
deptry = "^0.11.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
lxml-stubs = "^0.4.0"
pre-commit = "^3.3.1"
pyright = "^1.1.308"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.poetry.scripts]
assemble = "brit_lib_fetch.scripts.assemble:main"
fetch = "brit_lib_fetch.scripts.fetch:main"

[tool.black]
include = "brit_lib_fetch/"
line-length = 120

[tool.isort]
multi_line_output = 3
profile = "black"

[tool.deptry]
ignore_unused = ["asyncio"]
